ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: welcome-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  rules:
    - host: welcome.domain.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: welcome-service
                port:
                  number: 80
